<resources>
    <string name="app_name">PracticalTest02</string>
    <string name="server">SERVER</string>
    <string name="port">Port</string>
    <string name="connect">Connect</string>
    <string name="client">CLIENT</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="get_weather_forecast">Get weather forecast</string>
    <string-array name="information_types">
        <item>temperature</item>
        <item>wind_speed</item>
        <item>condition</item>
        <item>pressure</item>
        <item>humidity</item>
        <item>all</item>
    </string-array>
</resources>